<resources>
    <string name="app_name">Lab8</string>
    <string name="title_activity_show_location">Map</string>
    <string name="address1">Address1</string>
    <string name="address2">Address2</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="country">Country</string>
    <string name="postal_code">Postal Code</string>
    <string name="phone">Phone</string>
    <string name="url">URL</string>
</resources>
